[project]
name = "restourantweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "datetime>=5.5",
    "email-validator>=2.2.0",
    "fastapi>=0.115.7",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
